src/test/ui/suggestions/issue-61963.stderr
error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:22:14
   |
LL |     bar: Box<Bar>,
   |              ^^^ help: use `dyn`: `dyn Bar`
   |
note: the lint level is defined here
  --> $DIR/issue-61963.rs:3:9
   |
LL | #![deny(bare_trait_objects)]
   |         ^^^^^^^^^^^^^^^^^^
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>

error: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-61963.rs:18:1
   |
LL | pub struct Foo {
   | ^^^ help: use `dyn`: `dyn pub`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>

error: aborting due to 2 previous errors

